--- a/index.html
+++ b/index.html
@@ -1,10 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Aula de CSS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+<!-- <style>
+    h1 {
+        color: blue;
+        background-color: aqua;
+        font-size: 96px;
+        font-weight: 900;
+    }
+</style> -->
+
 <body>
+    <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
+    <h1>Aprendendo CSS</h1>
 </body>
+
 </html>
