--- a/index.html
+++ b/index.html
@@ -17,8 +17,38 @@
 </style> -->
 
 <body>
+    <div class="bg"></div>
     <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
     <h1>Aprendendo CSS</h1>
+    <h2>Subtítulo qualqer</h2>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis porro,
+        illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
+        molestias quasi atque doloribus sapiente asperiores? Ad repellendus consequuntur aspernatur pariatur suscipit
+        dolore, illo itaque magnam molestias, illum, recusandae a nemo id necessitatibus sint. Odio officia sapiente
+        quia non atque minima expedita, quis ea vitae deleniti quos iusto est, blanditiis dignissimos sequi fugit unde,
+        quibusdam inventore optio amet magnam quaerat. Velit accusantium, beatae, delectus vero deleniti nesciunt
+        repudiandae maiores illum aperiam commodi doloremque. Dignissimos perferendis dicta modi, voluptate veniam ipsum
+        minus odio expedita sit exercitationem voluptas impedit ut provident rem assumenda quasi reiciendis recusandae
+        illo at! Debitis ex aut quod nam nemo totam excepturi? Magni tenetur quod culpa amet perferendis in cumque
+        consectetur fuga, adipisci quae! Soluta laboriosam, ullam consectetur odit ut natus unde maxime quam voluptas
+        esse placeat odio deserunt laudantium dolor culpa consequatur quos, id minima harum cumque labore aliquam? Nobis
+        pariatur reiciendis deserunt, rerum perspiciatis aut. Magni, illum pariatur ex eius exercitationem nulla,
+        eveniet nesciunt iste ut consequatur ullam corrupti tenetur quisquam voluptas quia facere recusandae, amet quae
+        ab neque? In veniam assumenda porro incidunt praesentium, a enim ullam, odit fugiat optio corrupti neque impedit
+        dolore, minima eaque obcaecati? Porro cumque doloremque illo consequatur adipisci asperiores, voluptatum a
+        voluptas culpa, eos quos corrupti? Consequatur vel pariatur cumque beatae minima, totam ipsum excepturi, quos
+        voluptatum illo consequuntur velit fugiat dolor aliquid corrupti magni reprehenderit perferendis soluta iste ea
+        hic odio ab quam voluptatem. Asperiores possimus, quo laudantium culpa necessitatibus quam dolore optio aliquid
+        enim amet cupiditate ab voluptas fugiat accusamus beatae sapiente et numquam placeat velit quae provident
+        repellendus natus quaerat doloribus. Accusamus, distinctio repudiandae voluptate molestiae, odit fuga corporis
+        cupiditate deserunt ipsam animi ut quos eligendi eius. Aut laudantium est neque quae quos ab debitis ipsa
+        expedita ratione reiciendis ex soluta, earum quod nulla voluptates. Libero cumque obcaecati repellat consequatur
+        odit. Pariatur nemo laborum tempore minus eius quia quas tempora ut earum. Vitae a similique blanditiis
+        provident quo, fugiat obcaecati sint sequi tempore doloribus aliquid? Nihil laboriosam eos laborum ipsam quidem
+        magnam eius harum et eveniet quae optio officia aliquid adipisci rem quos voluptates at non blanditiis ipsum
+        iure sint, velit, maiores esse! Corrupti eveniet numquam molestias nam? Aperiam laborum sunt quam non fugiat,
+        accusantium, odio saepe voluptate exercitationem quos voluptatum suscipit architecto cumque praesentium!</p>
 </body>
 
 </html>
