--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aula de CSS</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <!-- <style>
     h1 {
@@ -20,7 +23,13 @@
     <div class="bg"></div>
     <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
     <h1>Aprendendo CSS</h1>
-    <h2>Subtítulo qualqer</h2>
+    <h2>Subtítulo qualquer</h2>
+
+    <div class="novo-em">
+        <h2>Texto teste</h2>
+    </div>
+
+    <a href=""></a>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis porro,
         illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
