--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2>Texto teste</h2>
     </div>
 
-    <a href=""></a>
+    <a href="time.html">conheça o time</a>
 
     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis porro,
         illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
