--- a/index.html
+++ b/index.html
@@ -23,41 +23,113 @@
     <div class="bg"></div>
     <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
     <h1>Aprendendo CSS</h1>
-    <h2>Subtítulo qualquer</h2>
+    <h2>Tabela</h2>
 
-    <div class="novo-em">
-        <h2>Texto teste</h2>
-    </div>
+    <table>
+        <tr>
+            <th>Empresa</th>
+            <th>Contato</th>
+            <th>País</th>
+        </tr>
+        <tr>
+            <td>Global CO</td>
+            <td>Julia Lagos </td>
+            <td>Chile</td>
+        </tr>
+        <tr>
+            <td>Centro comercial Laguna</td>
+            <td>Jennifer Rios</td>
+            <td>Brasil</td>
+        </tr>
+        <tr>
+            <td>CE & C</td>
+            <td>Roberto Carlos</td>
+            <td>Brasil</td>
+        </tr>
+        <tr>
+            <td>Top Tech</td>
+            <td>João Cardoso</td>
+            <td>Portugal</td>
+    </table>
+
+    <h2>Lista de Compras</h2>
+    <ul>
+        <li>Arroz</li>
+        <li>Feijão</li>
+        <li>Batata</li>
+        <li>Abóbora</li>
+        <li>Maçã</li>
+    </ul>
+
+    <h2>Ranking dos times de vôlei de praia</h2>
+    <ol>
+        <li>Bonde dos Caios</li>
+        <li>MM</li>
+        <li>Tigres Praianos</li>
+    </ol>
+
+    <div class="box">Texto interior</div>
+
+    <img src="https://images.unsplash.com/photo-1528837516156-0a7225a43641?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+
+    <br>
 
     <a href="time.html">conheça o time</a>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis porro,
+    <br><br>
+
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis
+        porro,
         illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
-        molestias quasi atque doloribus sapiente asperiores? Ad repellendus consequuntur aspernatur pariatur suscipit
-        dolore, illo itaque magnam molestias, illum, recusandae a nemo id necessitatibus sint. Odio officia sapiente
-        quia non atque minima expedita, quis ea vitae deleniti quos iusto est, blanditiis dignissimos sequi fugit unde,
-        quibusdam inventore optio amet magnam quaerat. Velit accusantium, beatae, delectus vero deleniti nesciunt
-        repudiandae maiores illum aperiam commodi doloremque. Dignissimos perferendis dicta modi, voluptate veniam ipsum
-        minus odio expedita sit exercitationem voluptas impedit ut provident rem assumenda quasi reiciendis recusandae
-        illo at! Debitis ex aut quod nam nemo totam excepturi? Magni tenetur quod culpa amet perferendis in cumque
-        consectetur fuga, adipisci quae! Soluta laboriosam, ullam consectetur odit ut natus unde maxime quam voluptas
-        esse placeat odio deserunt laudantium dolor culpa consequatur quos, id minima harum cumque labore aliquam? Nobis
-        pariatur reiciendis deserunt, rerum perspiciatis aut. Magni, illum pariatur ex eius exercitationem nulla,
-        eveniet nesciunt iste ut consequatur ullam corrupti tenetur quisquam voluptas quia facere recusandae, amet quae
-        ab neque? In veniam assumenda porro incidunt praesentium, a enim ullam, odit fugiat optio corrupti neque impedit
-        dolore, minima eaque obcaecati? Porro cumque doloremque illo consequatur adipisci asperiores, voluptatum a
-        voluptas culpa, eos quos corrupti? Consequatur vel pariatur cumque beatae minima, totam ipsum excepturi, quos
-        voluptatum illo consequuntur velit fugiat dolor aliquid corrupti magni reprehenderit perferendis soluta iste ea
-        hic odio ab quam voluptatem. Asperiores possimus, quo laudantium culpa necessitatibus quam dolore optio aliquid
-        enim amet cupiditate ab voluptas fugiat accusamus beatae sapiente et numquam placeat velit quae provident
-        repellendus natus quaerat doloribus. Accusamus, distinctio repudiandae voluptate molestiae, odit fuga corporis
-        cupiditate deserunt ipsam animi ut quos eligendi eius. Aut laudantium est neque quae quos ab debitis ipsa
-        expedita ratione reiciendis ex soluta, earum quod nulla voluptates. Libero cumque obcaecati repellat consequatur
+        molestias quasi atque doloribus sapiente asperiores? Ad repellendus consequuntur aspernatur pariatur
+        suscipit
+        dolore, illo itaque magnam molestias, illum, recusandae a nemo id necessitatibus sint. Odio officia
+        sapiente
+        quia non atque minima expedita, quis ea vitae deleniti quos iusto est, blanditiis dignissimos sequi
+        fugit unde,
+        quibusdam inventore optio amet magnam quaerat. Velit accusantium, beatae, delectus vero deleniti
+        nesciunt
+        repudiandae maiores illum aperiam commodi doloremque. Dignissimos perferendis dicta modi, voluptate
+        veniam ipsum
+        minus odio expedita sit exercitationem voluptas impedit ut provident rem assumenda quasi reiciendis
+        recusandae
+        illo at! Debitis ex aut quod nam nemo totam excepturi? Magni tenetur quod culpa amet perferendis in
+        cumque
+        consectetur fuga, adipisci quae! Soluta laboriosam, ullam consectetur odit ut natus unde maxime quam
+        voluptas
+        esse placeat odio deserunt laudantium dolor culpa consequatur quos, id minima harum cumque labore
+        aliquam? Nobis
+        pariatur reiciendis deserunt, rerum perspiciatis aut. Magni, illum pariatur ex eius exercitationem
+        nulla,
+        eveniet nesciunt iste ut consequatur ullam corrupti tenetur quisquam voluptas quia facere recusandae,
+        amet quae
+        ab neque? In veniam assumenda porro incidunt praesentium, a enim ullam, odit fugiat optio corrupti neque
+        impedit
+        dolore, minima eaque obcaecati? Porro cumque doloremque illo consequatur adipisci asperiores, voluptatum
+        a
+        voluptas culpa, eos quos corrupti? Consequatur vel pariatur cumque beatae minima, totam ipsum excepturi,
+        quos
+        voluptatum illo consequuntur velit fugiat dolor aliquid corrupti magni reprehenderit perferendis soluta
+        iste ea
+        hic odio ab quam voluptatem. Asperiores possimus, quo laudantium culpa necessitatibus quam dolore optio
+        aliquid
+        enim amet cupiditate ab voluptas fugiat accusamus beatae sapiente et numquam placeat velit quae
+        provident
+        repellendus natus quaerat doloribus. Accusamus, distinctio repudiandae voluptate molestiae, odit fuga
+        corporis
+        cupiditate deserunt ipsam animi ut quos eligendi eius. Aut laudantium est neque quae quos ab debitis
+        ipsa
+        expedita ratione reiciendis ex soluta, earum quod nulla voluptates. Libero cumque obcaecati repellat
+        consequatur
         odit. Pariatur nemo laborum tempore minus eius quia quas tempora ut earum. Vitae a similique blanditiis
-        provident quo, fugiat obcaecati sint sequi tempore doloribus aliquid? Nihil laboriosam eos laborum ipsam quidem
-        magnam eius harum et eveniet quae optio officia aliquid adipisci rem quos voluptates at non blanditiis ipsum
-        iure sint, velit, maiores esse! Corrupti eveniet numquam molestias nam? Aperiam laborum sunt quam non fugiat,
-        accusantium, odio saepe voluptate exercitationem quos voluptatum suscipit architecto cumque praesentium!</p>
+        provident quo, fugiat obcaecati sint sequi tempore doloribus aliquid? Nihil laboriosam eos laborum ipsam
+        quidem
+        magnam eius harum et eveniet quae optio officia aliquid adipisci rem quos voluptates at non blanditiis
+        ipsum
+        iure sint, velit, maiores esse! Corrupti eveniet numquam molestias nam? Aperiam laborum sunt quam non
+        fugiat,
+        accusantium, odio saepe voluptate exercitationem quos voluptatum suscipit architecto cumque praesentium!
+    </p>
 </body>
 
 </html>
