--- a/index.html
+++ b/index.html
@@ -20,116 +20,178 @@
 </style> -->
 
 <body>
-    <div class="bg"></div>
-    <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
-    <h1>Aprendendo CSS</h1>
-    <h2>Tabela</h2>
+    <nav class="menu">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="time.html">Nosso Time</a></li>
+        </ul>
+    </nav>
 
-    <table>
-        <tr>
-            <th>Empresa</th>
-            <th>Contato</th>
-            <th>País</th>
-        </tr>
-        <tr>
-            <td>Global CO</td>
-            <td>Julia Lagos </td>
-            <td>Chile</td>
-        </tr>
-        <tr>
-            <td>Centro comercial Laguna</td>
-            <td>Jennifer Rios</td>
-            <td>Brasil</td>
-        </tr>
-        <tr>
-            <td>CE & C</td>
-            <td>Roberto Carlos</td>
-            <td>Brasil</td>
-        </tr>
-        <tr>
-            <td>Top Tech</td>
-            <td>João Cardoso</td>
-            <td>Portugal</td>
-    </table>
+    <main>
+        <div class="bg"></div>
+        <!-- <h1 style="color: blue; font-size: 96px;">Aprendendo CSS</h1> -->
+        <h1>Aprendendo CSS</h1>
+        <h2>Tabela</h2>
 
-    <h2>Lista de Compras</h2>
-    <ul>
-        <li>Arroz</li>
-        <li>Feijão</li>
-        <li>Batata</li>
-        <li>Abóbora</li>
-        <li>Maçã</li>
-    </ul>
+        <table>
+            <tr>
+                <th>Empresa</th>
+                <th>Contato</th>
+                <th>País</th>
+            </tr>
+            <tr>
+                <td>Global CO</td>
+                <td>Julia Lagos </td>
+                <td>Chile</td>
+            </tr>
+            <tr>
+                <td>Centro comercial Laguna</td>
+                <td>Jennifer Rios</td>
+                <td>Brasil</td>
+            </tr>
+            <tr>
+                <td>CE & C</td>
+                <td>Roberto Carlos</td>
+                <td>Brasil</td>
+            </tr>
+            <tr>
+                <td>Top Tech</td>
+                <td>João Cardoso</td>
+                <td>Portugal</td>
+        </table>
 
-    <h2>Ranking dos times de vôlei de praia</h2>
-    <ol>
-        <li>Bonde dos Caios</li>
-        <li>MM</li>
-        <li>Tigres Praianos</li>
-    </ol>
+        <h2>Lista de Compras</h2>
+        <ul>
+            <li>Arroz</li>
+            <li>Feijão</li>
+            <li>Batata</li>
+            <li>Abóbora</li>
+            <li>Maçã</li>
+        </ul>
 
-    <div class="box">Texto interior</div>
+        <h2>Ranking dos times de vôlei de praia</h2>
+        <ol>
+            <li>Bonde dos Caios</li>
+            <li>MM</li>
+            <li>Tigres Praianos</li>
+        </ol>
 
-    <img src="https://images.unsplash.com/photo-1528837516156-0a7225a43641?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+        <section class="contact-list">
+            <h2>A</h2>
+            <ul>
+                <li>Ana</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+                <li>Andressa</li>
+            </ul>
+    
+            <h2>B</h2>
+            <ul>
+                <li>Beatriz</li>
+                <li>Beatriz</li>
+                <li>Beatriz</li>
+                <li>Beatriz</li>
+                <li>Beatriz</li>
+                <li>Beatriz</li>
+            </ul>
+            <h2>C</h2>
+            <ul>
+                <li>Camila</li>
+                <li>Camila</li>
+                <li>Camila</li>
+                <li>Camila</li>
+                <li>Camila</li>
+                <li>Camila</li>
+            </ul>
+        </section>
 
-    <br>
+        <div class="boxes">
+            <div class="box">Texto interior 1</div>
+            <div class="box">Texto interior 2</div>
+            <div class="box">Texto interior 3</div>
+            <div class="box">Texto interior 4</div>
+            <div class="box">Texto interior 5</div>
+            <div class="box">Texto interior 6</div>
+            <div class="box">Texto interior 6</div>
 
-    <a href="time.html">conheça o time</a>
+            <span>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, voluptatum. Veritatis qui sequi illo
+                dignissimos voluptate, delectus perspiciatis nemo ipsa, ad quisquam magni culpa voluptatem accusantium
+                provident illum expedita? Animi soluta accusamus quo nostrum culpa qui illum suscipit asperiores ea!
+                Dolor
+                nesciunt quaerat debitis adipisci eius, ullam veritatis dolorum laborum, cupiditate vitae quibusdam
+                doloremque doloribus architecto animi? A illo iusto dolorum mollitia commodi, dolorem odio recusandae
+                deleniti est doloribus quos ab sed deserunt architecto nobis temporibus nisi animi quaerat ea. Odio
+                voluptates ab quo mollitia cupiditate ullam corporis id voluptatum. Ducimus alias repellat quam dicta
+                quibusdam mollitia praesentium et vitae.
+            </span>
 
-    <br><br>
+        </div>
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis
-        porro,
-        illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
-        molestias quasi atque doloribus sapiente asperiores? Ad repellendus consequuntur aspernatur pariatur
-        suscipit
-        dolore, illo itaque magnam molestias, illum, recusandae a nemo id necessitatibus sint. Odio officia
-        sapiente
-        quia non atque minima expedita, quis ea vitae deleniti quos iusto est, blanditiis dignissimos sequi
-        fugit unde,
-        quibusdam inventore optio amet magnam quaerat. Velit accusantium, beatae, delectus vero deleniti
-        nesciunt
-        repudiandae maiores illum aperiam commodi doloremque. Dignissimos perferendis dicta modi, voluptate
-        veniam ipsum
-        minus odio expedita sit exercitationem voluptas impedit ut provident rem assumenda quasi reiciendis
-        recusandae
-        illo at! Debitis ex aut quod nam nemo totam excepturi? Magni tenetur quod culpa amet perferendis in
-        cumque
-        consectetur fuga, adipisci quae! Soluta laboriosam, ullam consectetur odit ut natus unde maxime quam
-        voluptas
-        esse placeat odio deserunt laudantium dolor culpa consequatur quos, id minima harum cumque labore
-        aliquam? Nobis
-        pariatur reiciendis deserunt, rerum perspiciatis aut. Magni, illum pariatur ex eius exercitationem
-        nulla,
-        eveniet nesciunt iste ut consequatur ullam corrupti tenetur quisquam voluptas quia facere recusandae,
-        amet quae
-        ab neque? In veniam assumenda porro incidunt praesentium, a enim ullam, odit fugiat optio corrupti neque
-        impedit
-        dolore, minima eaque obcaecati? Porro cumque doloremque illo consequatur adipisci asperiores, voluptatum
-        a
-        voluptas culpa, eos quos corrupti? Consequatur vel pariatur cumque beatae minima, totam ipsum excepturi,
-        quos
-        voluptatum illo consequuntur velit fugiat dolor aliquid corrupti magni reprehenderit perferendis soluta
-        iste ea
-        hic odio ab quam voluptatem. Asperiores possimus, quo laudantium culpa necessitatibus quam dolore optio
-        aliquid
-        enim amet cupiditate ab voluptas fugiat accusamus beatae sapiente et numquam placeat velit quae
-        provident
-        repellendus natus quaerat doloribus. Accusamus, distinctio repudiandae voluptate molestiae, odit fuga
-        corporis
-        cupiditate deserunt ipsam animi ut quos eligendi eius. Aut laudantium est neque quae quos ab debitis
-        ipsa
-        expedita ratione reiciendis ex soluta, earum quod nulla voluptates. Libero cumque obcaecati repellat
-        consequatur
-        odit. Pariatur nemo laborum tempore minus eius quia quas tempora ut earum. Vitae a similique blanditiis
-        provident quo, fugiat obcaecati sint sequi tempore doloribus aliquid? Nihil laboriosam eos laborum ipsam
-        quidem
-        magnam eius harum et eveniet quae optio officia aliquid adipisci rem quos voluptates at non blanditiis
-        ipsum
-        iure sint, velit, maiores esse! Corrupti eveniet numquam molestias nam? Aperiam laborum sunt quam non
-        fugiat,
-        accusantium, odio saepe voluptate exercitationem quos voluptatum suscipit architecto cumque praesentium!
-    </p>
+
+        <img
+            src="https://images.unsplash.com/photo-1528837516156-0a7225a43641?q=80&w=1933&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+
+        <br>
+
+        <a href="time.html">conheça o time</a>
+
+        <br><br>
+
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut repudiandae quasi hic eum non dicta facilis
+            porro,
+            illum numquam iste fuga, nesciunt fugit eveniet adipisci ad laboriosam sapiente? Eum, nemo officiis sit
+            molestias quasi atque doloribus sapiente asperiores? Ad repellendus consequuntur aspernatur pariatur
+            suscipit
+            dolore, illo itaque magnam molestias, illum, recusandae a nemo id necessitatibus sint. Odio officia
+            sapiente
+            quia non atque minima expedita, quis ea vitae deleniti quos iusto est, blanditiis dignissimos sequi
+            fugit unde,
+            quibusdam inventore optio amet magnam quaerat. Velit accusantium, beatae, delectus vero deleniti
+            nesciunt
+            repudiandae maiores illum aperiam commodi doloremque. Dignissimos perferendis dicta modi, voluptate
+            veniam ipsum
+            minus odio expedita sit exercitationem voluptas impedit ut provident rem assumenda quasi reiciendis
+            recusandae
+            illo at! Debitis ex aut quod nam nemo totam excepturi? Magni tenetur quod culpa amet perferendis in
+            cumque
+            consectetur fuga, adipisci quae! Soluta laboriosam, ullam consectetur odit ut natus unde maxime quam
+            voluptas
+            esse placeat odio deserunt laudantium dolor culpa consequatur quos, id minima harum cumque labore
+            aliquam? Nobis
+            pariatur reiciendis deserunt, rerum perspiciatis aut. Magni, illum pariatur ex eius exercitationem
+            nulla,
+            eveniet nesciunt iste ut consequatur ullam corrupti tenetur quisquam voluptas quia facere recusandae,
+            amet quae
+            ab neque? In veniam assumenda porro incidunt praesentium, a enim ullam, odit fugiat optio corrupti neque
+            impedit
+            dolore, minima eaque obcaecati? Porro cumque doloremque illo consequatur adipisci asperiores, voluptatum
+            a
+            voluptas culpa, eos quos corrupti? Consequatur vel pariatur cumque beatae minima, totam ipsum excepturi,
+            quos
+            voluptatum illo consequuntur velit fugiat dolor aliquid corrupti magni reprehenderit perferendis soluta
+            iste ea
+            hic odio ab quam voluptatem. Asperiores possimus, quo laudantium culpa necessitatibus quam dolore optio
+            aliquid
+            enim amet cupiditate ab voluptas fugiat accusamus beatae sapiente et numquam placeat velit quae
+            provident
+            repellendus natus quaerat doloribus. Accusamus, distinctio repudiandae voluptate molestiae, odit fuga
+            corporis
+            cupiditate deserunt ipsam animi ut quos eligendi eius. Aut laudantium est neque quae quos ab debitis
+            ipsa
+            expedita ratione reiciendis ex soluta, earum quod nulla voluptates. Libero cumque obcaecati repellat
+            consequatur
+            odit. Pariatur nemo laborum tempore minus eius quia quas tempora ut earum. Vitae a similique blanditiis
+            provident quo, fugiat obcaecati sint sequi tempore doloribus aliquid? Nihil laboriosam eos laborum ipsam
+            quidem
+            magnam eius harum et eveniet quae optio officia aliquid adipisci rem quos voluptates at non blanditiis
+            ipsum
+            iure sint, velit, maiores esse! Corrupti eveniet numquam molestias nam? Aperiam laborum sunt quam non
+            fugiat,
+            accusantium, odio saepe voluptate exercitationem quos voluptatum suscipit architecto cumque praesentium!
+        </p>
+    </main>
 </body>
 
 </html>
